--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     networks:
       - my-mongo-cluster
     volumes:
-      - ./mongo-init/data-import/nodes.json:/tmp/nodes.json
+      - ./mongo-init/data-import/:/tmp/
 
   mongo2:
     image: mongo:4.4
